@@ -126,26 +126,33 @@ bool ParseTimeInSeconds(ConstString word, float &seconds)
    return true;
 }
 
-void Wnd_Main::ParseCommand(ConstString fullLine)
+void Wnd_Main::ParseCommand(ConstString full_line)
 try
 {
-   ConstString commandLine=fullLine.WithoutFirst(1);
-   if(commandLine.First()=='/') // Non command pass through?
-      return SendLine(commandLine);
+   ConstString command_line=full_line.WithoutFirst(1);
+   if(command_line.First()=='/') // Non command pass through?
+      return SendLine(command_line);
 
    // See if the script wants to handle it
    if(m_events.Get<Event_Command>())
    {
       SetScripterWindow();
 
-      ConstString command=commandLine, parameters;
-      commandLine.Split(' ', command, parameters);
+      ConstString command=command_line, parameters;
+      command_line.Split(' ', command, parameters);
       Event_Command event(command, parameters);
       if(m_events.Send(event, event))
          return;
    }
 
-   WordList wl(commandLine);
+   bool verbose=true;
+   if(auto result=command_line.RightOf("silent/"))
+   {
+      command_line=result;
+      verbose=false;
+   }
+
+   WordList wl(command_line);
 
    ConstString command;
    if(wl)
@@ -164,6 +171,8 @@ try
          "",
          "<p align='center'><font color='silver'><b><u>  " gd_pcTitle " - Command Line Help  </u></b>",
          "/@ $ - Run an immediate script, $ can span multiple lines of text",
+         "/silent/(command) - Prefix for any command that will suppress informational messages from it",
+         "",
          "/ansireset - Reset ansi state to default (useful if the server misbehaves and leaves a style set)",
          "/autolog - If one is setup and was stopped, this restarts the autolog",
          "/capturecancel - Cancel any spawn capture in the current window",
@@ -240,10 +249,13 @@ try
       mp_wnd_text->AddHTML("<u>And now some messages from our Lizard supporters:</u>" CRLF
          "<font color='lime'>Cam-a-cam-mal, Pria-toi, Gan delah</font><font color='white'> - Snowglass</font>" CRLF
          "<font color='lime'>kweh</font><font color='white'> - Thistle</font>" CRLF
-//         "<font color='lime'>🦌 ☀️ ☀️ 🚙</font>" CRLF /* DeerInHeadlights */
+         "<font color='lime'>🦌 ☀️ ☀️ 🚙</font>" CRLF /* DeerInHeadlights */
          "🦎 🦎");
       return;
    }
+
+   
+
 
    // Clear
    if(IEquals(command, "clear"))
@@ -294,9 +306,9 @@ try
          
       } options;
 
-      if(commandLine.Length()>command.Length()+1)
+      if(command_line.Length()>command.Length()+1)
       {
-         auto attributes=commandLine.WithoutFirst(command.Length()+1);
+         auto attributes=command_line.WithoutFirst(command.Length()+1);
          ParseXMLAttributes(attributes, options);
       }
 
@@ -338,9 +350,10 @@ try
       ConstString ignore, params;
       ConstString name, value;
 
-      if(!commandLine.Split(' ', ignore, params) || !params.Split('=', name, value))
+      if(!command_line.Split(' ', ignore, params) || !params.Split('=', name, value))
       {
-         mp_wnd_text->AddHTML("<font color='red'>Syntax error, missing '='");
+         if(verbose)
+            mp_wnd_text->AddHTML("<font color='red'>Syntax error, missing '='");
          return;
       }
 
@@ -349,12 +362,14 @@ try
       if(index==~0U)
       {
          variables.Add(name, value);
-         mp_wnd_text->AddHTML("<font color='aqua'>New variable added");
+         if(verbose)
+            mp_wnd_text->AddHTML("<font color='aqua'>New variable added");
       }
       else
       {
          variables[index]->pclValue(value);
-         mp_wnd_text->AddHTML("<font color='aqua'>Existing variable set to new value");
+         if(verbose)
+            mp_wnd_text->AddHTML("<font color='aqua'>Existing variable set to new value");
       }
       return;
    }
@@ -362,7 +377,7 @@ try
    if(IEquals(command, "unset"))
    {
       ConstString ignore, name;
-      if(!commandLine.Split(' ', ignore, name))
+      if(!command_line.Split(' ', ignore, name))
       {
          mp_wnd_text->AddHTML("<font color='red'>Error, missing variable name");
          return;
@@ -377,7 +392,8 @@ try
       }
 
       variables.UnsortedDelete(index);
-      mp_wnd_text->AddHTML("<font color='aqua'>Variable deleted");
+      if(verbose)
+         mp_wnd_text->AddHTML("<font color='aqua'>Variable deleted");
       return;
    }
 
@@ -393,7 +409,8 @@ try
             if(!fLocalEcho)
             {
                m_input.GetProps().fLocalEcho(true);
-               mp_wnd_text->AddHTML("<font color='green'>Echo turned ON");
+               if(verbose)
+                  mp_wnd_text->AddHTML("<font color='green'>Echo turned ON");
             }
             return;
          }
@@ -405,7 +422,8 @@ try
             if(!fLocalEcho)
             {
                m_input.GetProps().fLocalEcho(true);
-               mp_wnd_text->AddHTML("<font color='green'>Echo turned ON");
+               if(verbose)
+                  mp_wnd_text->AddHTML("<font color='green'>Echo turned ON");
             }
             return;
          }
@@ -415,7 +433,8 @@ try
             if(fLocalEcho)
             {
                m_input.GetProps().fLocalEcho(false);
-               mp_wnd_text->AddHTML("<font color='red'>Echo turned OFF");
+               if(verbose)
+                  mp_wnd_text->AddHTML("<font color='red'>Echo turned OFF");
             }
             return;
          }
@@ -469,7 +488,8 @@ try
          }
          if(IEquals(wl[1], "killall"))
          {
-            mp_wnd_text->AddHTML("<icon information> <font color='aqua'>All pending timers erased</font>");
+            if(verbose)
+               mp_wnd_text->AddHTML("<icon information> <font color='aqua'>All pending timers erased</font>");
             m_delay_timers.Empty();
             return;
          }
@@ -486,7 +506,8 @@ try
             {
                if(v.m_id==id)
                {
-                  mp_wnd_text->AddHTML("<icon information> Timer killed");
+                  if(verbose)
+                     mp_wnd_text->AddHTML("<icon information> Timer killed");
                   delete &v;
                   return;
                }
@@ -509,13 +530,16 @@ try
          if(ParseTimeInSeconds(wl[wl_index++], seconds) && wl.Count()==wl_index+1)
          {
             auto &timer=*new DelayTimer(*this, wl[wl_index], seconds, repeating);
-            FixedStringBuilder<256> string("<icon information> <font color='green'>Starting timer with ID:", timer.m_id, " in ");
-            if(unsigned frac;seconds<60.0f && (frac=unsigned(seconds*100)%100))
-               string(int(seconds), '.', Strings::Int(frac, 2, '0'), "s");
-            else
-               Time::SecondsToStringAbbreviated(string, seconds);
-            string("</font>");
-            mp_wnd_text->AddHTML(string);
+            if(verbose)
+            {
+               FixedStringBuilder<256> string("<icon information> <font color='green'>Starting timer with ID:", timer.m_id, " in ");
+               if(unsigned frac;seconds<60.0f && (frac=unsigned(seconds*100)%100))
+                  string(int(seconds), '.', Strings::Int(frac, 2, '0'), "s");
+               else
+                  Time::SecondsToStringAbbreviated(string, seconds);
+               string("</font>");
+               mp_wnd_text->AddHTML(string);
+            }
             return;
          }
       }
@@ -539,12 +563,13 @@ try
          {
             m_idle_timer.Reset();
             m_idle_string.Clear();
-            mp_wnd_text->AddHTML("<icon information> <font color='aqua'>Idle timer removed");
+            if(verbose)
+               mp_wnd_text->AddHTML("<icon information> <font color='aqua'>Idle timer removed");
 
             if(auto *p_character=mp_connection->GetCharacter())
                p_character->fIdleEnabled(false);
          }
-         else
+         else if(verbose)
             mp_wnd_text->AddHTML("<icon information> No idle timer set");
          return;
       }
@@ -561,7 +586,8 @@ try
          PinAbove(m_idle_delay, 1U); // Must be at least 1 minute!
          m_idle_string=wl[2];
          m_idle_timer.Set(m_idle_delay*60.0f, true);
-         mp_wnd_text->AddHTML(FixedStringBuilder<256>("<icon information> <font color='aqua'>Idle timer activated, sending <font color='white'>", m_idle_string, "</font> every ", m_idle_delay, " minutes"));
+         if(verbose)
+            mp_wnd_text->AddHTML(FixedStringBuilder<256>("<icon information> <font color='aqua'>Idle timer activated, sending <font color='white'>", m_idle_string, "</font> every ", m_idle_delay, " minutes"));
 
          if(auto *p_character=mp_connection->GetCharacter())
          {
@@ -635,8 +661,8 @@ try
 
    if(IEquals(command, "ping"))
    {
-      if(commandLine.Length()>command.Length()+1)
-         mp_connection->Send(commandLine.WithoutFirst(command.Length()+1));
+      if(command_line.Length()>command.Length()+1)
+         mp_connection->Send(command_line.WithoutFirst(command.Length()+1));
       else
          mp_connection->Send({}); // Send a blank line
       mp_connection->StartPing();
@@ -675,13 +701,13 @@ try
          return;
       }
 
-      if(commandLine.Length()<=command.Length()+1)
+      if(command_line.Length()<=command.Length()+1)
       {
          mp_wnd_text->AddHTML("<font color='red'>Can't run, no script code given");
          return;
       }
 
-      p_scripter->Run(OwnedBSTR(commandLine.WithoutFirst(command.Length()+1)));
+      p_scripter->Run(OwnedBSTR(command_line.WithoutFirst(command.Length()+1)));
       return;
    }
 
@@ -794,11 +820,12 @@ try
          trigger=0;
          ppropTriggers->Insert(0, std::move(ppropTrigger));
       }
-      else
+      else if(verbose)
          mp_wnd_text->AddHTML("<font color='aqua'><b>Gag:</b> Trigger already exists, enabling gag on existing trigger");
 
       (*ppropTriggers)[trigger]->propGag().fActive(true);
-      mp_wnd_text->AddHTML("<font color='lime'><b>Gag:</b> Trigger Activated");
+      if(verbose)
+         mp_wnd_text->AddHTML("<font color='lime'><b>Gag:</b> Trigger Activated");
       return;
    }
 
@@ -1102,9 +1129,9 @@ try
          OwnedString prepend, append;
       } options;
 
-      if(commandLine.Length()>command.Length()+1)
+      if(command_line.Length()>command.Length()+1)
       {
-         auto attributes=commandLine.WithoutFirst(command.Length()+1);
+         auto attributes=command_line.WithoutFirst(command.Length()+1);
          ParseXMLAttributes(attributes, options);
       }
 
@@ -1145,9 +1172,9 @@ try
 
    if(IEquals(command, "setinput"))
    {
-      if(commandLine.Length()>command.Length()+1 && mp_input_active->GetTextLength()==0)
+      if(command_line.Length()>command.Length()+1 && mp_input_active->GetTextLength()==0)
       {
-         mp_input_active->SetText(commandLine.WithoutFirst(command.Length()+1));
+         mp_input_active->SetText(command_line.WithoutFirst(command.Length()+1));
          mp_input_active->SetSelAll();
       }
       return;
@@ -1261,7 +1288,8 @@ try
          auto &telnet=mp_connection->GetTelnet();
          telnet.m_do_naws=false;
          telnet.SendNAWS(size);
-         mp_wnd_text->AddHTML(FixedStringBuilder<256>("<icon information>TELOPT_NAWS <b>Width:</b>", size.x, " <b>Height:</b>", size.y, " sent"));
+         if(verbose)
+            mp_wnd_text->AddHTML(FixedStringBuilder<256>("<icon information>TELOPT_NAWS <b>Width:</b>", size.x, " <b>Height:</b>", size.y, " sent"));
          return;
       }
 
@@ -1339,9 +1367,9 @@ try
          return;
       }
 
-      if(commandLine.Length()>command.Length()+1)
+      if(command_line.Length()>command.Length()+1)
       {
-         auto data=commandLine.WithoutFirst(command.Length()+1);
+         auto data=command_line.WithoutFirst(command.Length()+1);
          if(mp_connection->IsInReceive())
          {
             mp_connection->Display(data);
@@ -1367,16 +1395,16 @@ try
 
    if(IEquals(command, "receivegmcp"))
    {
-      auto data=commandLine.WithoutFirst(command.Length()+1);
+      auto data=command_line.WithoutFirst(command.Length()+1);
       mp_connection->OnGMCP(data);
       return;
    }
 
    if(IEquals(command, "wall"))
    {
-      if(commandLine.Length()<command.Length()+1)
+      if(command_line.Length()<command.Length()+1)
          return;
-      Strings::HeapStringBuilder param; param(commandLine.WithoutFirst(command.Length()+1), CRLF);
+      Strings::HeapStringBuilder param; param(command_line.WithoutFirst(command.Length()+1), CRLF);
 
       for(auto &connection : Connection::s_root_node)
       {
@@ -2230,7 +2258,7 @@ GMCP_BEGIN R"+(beip.tilemap.data { "Laboratory":"k+ZFAXzaLKxIgE1/5ixHhtsMYBBzLFl
    }
 
    if(g_ppropGlobal->fSendUnrecognizedCommands())
-      SendLine(fullLine);
+      SendLine(full_line);
    else
       mp_wnd_text->AddHTML("<icon error> <font color='red'>Unrecognized Command, use // to send text directly to the mu*, /help for a list of commands, or set 'Send unrecognized commands' in settings/input window");
 }
